--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   	],
     "config": {
         "platform": {
-            "php": "7.1.*"
+            "php": "7.1.1"
         }
     },
     "require": {
