Air sell from recomendation

--- a/composer.json
+++ b/composer.json
@@ -35,5 +35,10 @@
 	    "psr-4": {
 	      "appletechlabs\\flight\\": "src"
 	    }
-	}
+	},
+      "autoload-dev": {
+        "psr-4": {
+          "Test\\flight\\": "tests"
+        }
+    }
 }
