--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ composer.phar
 .idea/
 index.php
 sessions.php
+test.php
+project.sublime-project
+project.sublime-workspace
 
 # Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
 # You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
