--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ sessions.php
 test.php
 project.sublime-project
 project.sublime-workspace
+/logs/
 
 # Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
 # You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
