--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
 
 	},
     "require-dev": {
-    	"phpunit/phpunit": "6.4.*"
+    	"phpunit/phpunit": "^7"
 	},
 	  "autoload": {
 	    "psr-4": {
